==> Jarins/Solder-Paste-Dispenser-with-DCMotor/Software/CubeMX/Application/ssd1306.c <==
#include "ssd1306.h"
#include "gpio.h"
#define SSD1306_DATA 			0x40
#define SSD1306_MULTIPLE_DATA 	0xC0
#define SSD1306_COMMAND   		0x00
#define SSD1306_WRITECOMMAND(command)      ssd1306_I2C_Write(SSD1306_I2C_ADDR, SSD1306_COMMAND, (command))
#define SSD1306_WRITEDATA(data)            ssd1306_I2C_Write(SSD1306_I2C_ADDR, SSD1306_DATA, (data))
#define ABS(x)   ((x) > 0 ? (x) : -(x))
#define SSD1306_SETCONTRAST 0x81
#define SSD1306_DISPLAYALLON_RESUME 					0xA4
#define SSD1306_DISPLAYALLON 							0xA5
#define SSD1306_DISPLAYOFF 								0xAE
#define SSD1306_DISPLAYON 								0xAF
#define SSD1306_SETDISPLAYOFFSET 						0xD3
#define SSD1306_SETCOMPINS 								0xDA
#define SSD1306_SETVCOMDETECT 							0xDB
#define SSD1306_SETDISPLAYCLOCKDIV 						0xD5
#define SSD1306_SETPRECHARGE 							0xD9
#define SSD1306_SETMULTIPLEX 							0xA8
#define SSD1306_SETLOWCOLUMN 							0x00
#define SSD1306_SETHIGHCOLUMN 							0x10
#define SSD1306_SETSTARTLINE 							0x40
#define SSD1306_MEMORYMODE 								0x20
#define SSD1306_COLUMNADDR 								0x21
#define SSD1306_PAGEADDR   								0x22
#define SSD1306_CHARGEPUMP 								0x8D
#define SSD1306_EXTERNALVCC 							0x01
#define SSD1306_SWITCHCAPVCC 							0x02
#define SSD1306_RIGHT_HORIZONTAL_SCROLL              	0x26
#define SSD1306_LEFT_HORIZONTAL_SCROLL               	0x27
#define SSD1306_VERTICAL_AND_RIGHT_HORIZONTAL_SCROLL 	0x29
#define SSD1306_VERTICAL_AND_LEFT_HORIZONTAL_SCROLL  	0x2A

uint8_t SSD1306_Init(void) {

	/* Init I2C */
	ssd1306_I2C_Init();
	
	/* Check if LCD connected to I2C */
	if (HAL_I2C_IsDeviceReady(&hi2c1, SSD1306_I2C_ADDR, 1, 200) != HAL_OK) {
		/* Return false */
		return 0;
	}
	
	/* A little delay */
	uint32_t p = 2500;
	while(p>0)
		p--;
	
	//Init LCD
	SSD1306_WRITECOMMAND(SSD1306_DISPLAYOFF); 			// 0xAE vypnuto zobrazení
    SSD1306_WRITECOMMAND(SSD1306_MEMORYMODE); 			// 0x20 režim adresování stránky
    SSD1306_WRITECOMMAND(0x00);          				// 0x00 horizontal addressing

    SSD1306_WRITECOMMAND(SSD1306_MIRROR_VERT_NORM);		// 0xC8 Skenování od 127 do 0 (reverzní skenování)
    SSD1306_WRITECOMMAND(SSD1306_SETSTARTLINE);    		// 0x40 První řádek); ze kterého se má zahájit skenování
    SSD1306_WRITECOMMAND(SSD1306_SETCONTRAST);      	// 0x81 porovná hodnotu s 0x7F podle datasheetu
    SSD1306_WRITECOMMAND(0xFF);							// 0xFF max

    SSD1306_WRITECOMMAND(SSD1306_MIRROR_HORIZ_NORMAL);  // 0xA1 Použít reverzní mapování. 0x00 - je normální mapování
    SSD1306_WRITECOMMAND(SSD1306_NORMALDISPLAY);		// 0xA6 set normal display
    SSD1306_WRITECOMMAND(SSD1306_SETMULTIPLEX);       	// 0xA8 set multiplex ratio(1 to 64)
	SSD1306_WRITECOMMAND(SSD1306_HEIGHT-1);

	SSD1306_WRITECOMMAND(SSD1306_SETDISPLAYOFFSET); 	// 0xD3 set display offset
    SSD1306_WRITECOMMAND(0x00);          				// 0x00 not offset

    SSD1306_WRITECOMMAND(SSD1306_SETDISPLAYCLOCKDIV); 	// 0xD5 set display clock divide ratio/oscillator frequency
    SSD1306_WRITECOMMAND(0x80);          				// 0x80 set divide ratio default

    SSD1306_WRITECOMMAND(SSD1306_SETPRECHARGE);     	// 0xD9 set pre-charge period na 0x22 // 0xF1
    SSD1306_WRITECOMMAND(0x22);

    SSD1306_WRITECOMMAND(SSD1306_SETCOMPINS);       	// 0xDA set com pins hardware configuration
#if	(SSD1306_HEIGHT==32)
	SSD1306_WRITECOMMAND(0x02);							// 0x02 is for 128x32 !!!!!!!!!!!!!! UPDATE IN HEADER
#else
	SSD1306_WRITECOMMAND(0x12);							// 0x12 is for 128x64 !!!!!!!!!!!!!! UPDATE IN HEADER
#endif
    SSD1306_WRITECOMMAND(SSD1306_SETVCOMDETECT);     	// 0xDB set vcomh
    SSD1306_WRITECOMMAND(0x20); 						// 0x20 0.77xVcc

    SSD1306_WRITECOMMAND(SSD1306_CHARGEPUMP);        	// 0x8D set charge pump
    SSD1306_WRITECOMMAND(0x14); 						// 0x14 using internal VCC

    SSD1306_WRITECOMMAND(SSD1306_DISPLAYALLON_RESUME); 	// 0xA4 Output follows RAM content;0xA55,Output ignores RAM content
    SSD1306_WRITECOMMAND(SSD1306_DISPLAYON);			// 0xAF turn on SSD1306 panel


    SSD1306_WRITECOMMAND(SSD1306_DEACTIVATE_SCROLL);

	/* Clear screen */
	SSD1306_Fill(SSD1306_COLOR_BLACK);
	
	/* Update screen */
	SSD1306_UpdateScreen();
	
	/* Set default values */
	SSD1306.CurrentX = 0;
	SSD1306.CurrentY = 0;
	
	/* Initialized OK */
	SSD1306.Initialized = 1;
	
	/* Return OK */
	return 1;
}

void SSD1306_UpdateScreen(void) {

	SSD1306_WRITECOMMAND(SSD1306_PAGEADDR);//SSD1306_PAGEADDR
	SSD1306_WRITECOMMAND(0); // Page start address (0)
	SSD1306_WRITECOMMAND((SSD1306_HEIGHT/8)-1); // Page end address

	SSD1306_WRITECOMMAND(SSD1306_COLUMNADDR);
	SSD1306_WRITECOMMAND(0);   // Column start address (0)
	SSD1306_WRITECOMMAND(SSD1306_WIDTH-1); // Column end address (127)



	while(HAL_I2C_GetState(&hi2c1) != HAL_I2C_STATE_READY);
	HAL_I2C_Mem_Write_DMA(&hi2c1, SSD1306_I2C_ADDR, SSD1306_DATA, 1, &SSD1306_Buffer[0], sizeof(SSD1306_Buffer));
}
